<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layoutDirection="locale"
    tools:context="barqsoft.footballscores.AboutActivity$PlaceholderFragment">

    <TextView android:text="@string/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_margin="20dp"
        android:textDirection="locale"
        />
    <TextView android:text="@string/app_data_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#0000FF"
        android:layout_margin="20dp"
        android:textDirection="locale"
        />
    <TextView android:text="@string/match_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#FF0000"
        android:layout_marginBottom="20dp"
        android:textDirection="locale"
        />

    <include
       layout="@layout/scores_list_item" />
</LinearLayout>
