<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin_top"
    android:layoutDirection="locale" >
    <!-- We define separate margins to allow for flexibility in twiddling the margins
         depending on device form factor and target SDK version. -->
    <!-- drawable/sunny -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#F8F8F8"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/widget_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/appwidget_logo" />

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/widget_title"
            android:textAllCaps="true"
            android:textColor="#232323"
            android:textSize="16sp"
            android:textDirection="locale"
            android:textAlignment="center" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/home_team"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Home Team"
            android:textDirection="locale"
            android:textColor="#232323"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/game_scores"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Score"
            android:textDirection="locale"
            android:textColor="#232323"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/visiting_team"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Away Team"
            android:textDirection="locale"
            android:textColor="#232323"
            android:textSize="12sp" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="#F8F8F8"
        android:layoutDirection="locale" >
        <ListView
            android:id="@+id/score_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/soccer_match_list" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="#232323"
            android:text="@string/empty_view_text"
            android:textDirection="locale"
            android:textSize="20sp" />
    </FrameLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="#F0F0F0"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_previous"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/previous_day"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_games"
            android:src="@android:drawable/ic_menu_rotate"
            android:contentDescription="@string/refresh_scores" />

        <TextView
            android:id="@+id/day_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Today"
            android:textDirection="locale"
            android:textColor="#232323"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_next"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/next_day"
            />

    </LinearLayout>


</LinearLayout>